changed to 1 parameter for all fields
